Правки по результатам ревью

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     </p>
     <a class="btn btn_style_primary" href="#covering">Подробнее</a>
     <div class="explanation">Cannondale Systemsix</div>
-    <div class="main-image"></div>
+    <div class="main-image header-container__main-image"></div>
   </section>
 </header>
 <main class="page main">
